--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 	
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Iceland' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 	
 	<!--[if lt IE 9]>
@@ -38,7 +39,8 @@
 
 	<header id="navtop">
 		<a href="index.html" class="logo fleft">
-			<img src="img/logo.png" alt="Designa Studio">
+      <!--<img src="img/logo.png" alt="Designa Studio">-->
+      <h1 style="font-family: Iceland, Verdana, Helvetica;"><span style="color: red; ">SAVIT</span> <span style="color: grey;">Consultancy</span></h1>
 		</a>
 		
 		<nav class="fright">
@@ -72,28 +74,29 @@
 			<p class="mbottom">We would love to talk to you and answer all of your questions</p>
 			
 			<address class="mbottom">
-				<h5>DESIGNA studio </h5>
-				3615 Fake Street <br >
-				Level 5, Door 123 <br >
-				1010 WHATEVER<br >
-				<a href="http://maps.google.com">Get directions</a>
+				<h5>Savit Limited </h5>
+				Lower Richmond Road <br >
+				Richmond, Surrey <br >
+				United Kingdom<br >
+				<!--<a href="http://maps.google.com">Get directions</a>-->
 			</address>
 		
 			<p class="mbottom">
 				00 77 66 55 33<br >
 				00 77 66 55 33</p>
 			<p class="mbottom">
-				<a href="#">address@email.com</a><br >
-				<a href="#">Designa Studio on Facebook</a><br >
-				<a href="#">@designstudio on Twitter</a><br >
-				<a href="#">Designa Studio on Google+</a>
+				<a href="#">info@nagazuka.nl</a><br >
+				<a href="#">Savit on Facebook</a><br >
+				<a href="#">@savit on Twitter</a><br >
+				<a href="#">Savit on Google+</a>
 			</p>
+      <!--
 			<p>
 				<h6>Openning hours: </h6>
 				Monday to Friday <br >
 				09h00 to 17h00
 			</p>
-		
+	    -->	
 		</aside>
 		
 		<section class="grid col-three-quarters mq2-col-two-thirds mq3-col-full">
