--- a/work1.html
+++ b/work1.html
@@ -23,6 +23,7 @@
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
 	
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Iceland' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css">
 	
 	<!--[if lt IE 9]>
@@ -39,7 +40,8 @@
 
 	<header id="navtop">
 		<a href="index.html" class="logo fleft">
-			<img src="img/logo.png" alt="Designa Studio">
+      <!--<img src="img/logo.png" alt="Designa Studio">-->
+      <h1 style="font-family: Iceland, Verdana, Helvetica;"><span style="color: red; ">SAVIT</span> <span style="color: grey;">Consultancy</span></h1>
 		</a>
 		
 		<nav class="fright">
