--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 	<meta name="description" content="Designa Studio, a HTML5 / CSS3 template.">
 	<meta name="author" content="Sylvain Lafitte, Web Designer, sylvainlafitte.com">
 	
-	<title>ABOUT // Designa Studio</title>
+	<title>ABOUT // Savit Consultancy</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
@@ -48,7 +48,7 @@
 				<li><a href="about.html" class="navactive">About</a></li>
 			</ul>
 			<ul>
-				<li><a href="works.html">Works</a></li>
+				<li><a href="works.html">Clients</a></li>
 				<li><a href="services.html">Services</a></li>
 			</ul>
 			<ul>
@@ -130,7 +130,7 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
-			<li><a href="works.html">Works</a></li>
+			<li><a href="works.html">Clients</a></li>
 			<li><a href="services.html">Services</a></li>
 			<li><a href="blog.html">Blog</a></li>
 			<li><a href="contact.html">Contact</a></li>
