--- a/services.html
+++ b/services.html
@@ -17,7 +17,7 @@
 	<meta name="description" content="Designa Studio, a HTML5 / CSS3 template.">
 	<meta name="author" content="Sylvain Lafitte, Web Designer, sylvainlafitte.com">
 	
-	<title>SERVICES // Designa Studio</title>
+	<title>SERVICES // Savit Consultancy</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
@@ -51,7 +51,7 @@
 				<li><a href="about.html">About</a></li>
 			</ul>
 			<ul>
-				<li><a href="works.html">Works</a></li>
+				<li><a href="works.html">Clients</a></li>
 				<li><a href="services.html" class="navactive">Services</a></li>
 			</ul>
 			<ul>
@@ -182,7 +182,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="works.html">Works</a></li>
+				<li><a href="works.html">Clients</a></li>
 				<li><a href="services.html">Services</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
