--- a/work1.html
+++ b/work1.html
@@ -50,7 +50,7 @@
 				<li><a href="about.html">About</a></li>
 			</ul>
 			<ul>
-				<li><a href="works.html" class="navactive">Works</a></li>
+				<li><a href="works.html" class="navactive">Clients</a></li>
 				<li><a href="services.html">Services</a></li>
 			</ul>
 			<ul>
@@ -141,7 +141,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="works.html">Works</a></li>
+				<li><a href="works.html">Clients</a></li>
 				<li><a href="services.html">Services</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
