--- a/works.html
+++ b/works.html
@@ -17,7 +17,7 @@
 	<meta name="description" content="Designa Studio, a HTML5 / CSS3 template.">
 	<meta name="author" content="Sylvain Lafitte, Web Designer, sylvainlafitte.com">
 	
-	<title>WORKS // Designa Studio</title>
+	<title>CLIENTS // Savit Consultancy</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
@@ -50,7 +50,7 @@
 				<li><a href="about.html">About</a></li>
 			</ul>
 			<ul>
-				<li><a href="works.html" class="navactive">Works</a></li>
+				<li><a href="works.html" class="navactive">Clients</a></li>
 				<li><a href="services.html">Services</a></li>
 			</ul>
 			<ul>
@@ -65,7 +65,7 @@
 
 		<header class="grid col-full">
 			<hr>
-			<p class="fleft">Works</p>
+			<p class="fleft">Clients</p>
 		</header>
 
 
@@ -232,7 +232,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="works.html">Works</a></li>
+				<li><a href="works.html">Clients</a></li>
 				<li><a href="services.html">Services</a></li>
 				<li><a href="blog.html">Blog</a></li>
 				<li><a href="contact.html">Contact</a></li>
