--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
 	<header id="navtop">
 		<a href="index.html" class="logo fleft">
       <!--<img src="img/logo.png" alt="Designa Studio">-->
-      <h1 style="font-family: Iceland, Verdana, Helvetica;"><span style="color: red; ">SAVIT</span> <span style="color: grey;">Consultancy</span></h1>
+      <h1 style="font-family: Iceland, Verdana, Helvetica;"><span style="color: MediumTurquoise; ">SAVIT</span> <span style="color: grey;">Consultancy</span></h1>
 		</a>
 		
 		<nav class="fright">
@@ -47,12 +47,12 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html" class="navactive">About</a></li>
 			</ul>
-			<ul>
+			<!--<ul>
 				<li><a href="works.html">Clients</a></li>
 				<li><a href="services.html">Services</a></li>
-			</ul>
+			</ul>-->
 			<ul>
-				<li><a href="blog.html">Blog</a></li>
+				<!--<li><a href="blog.html">Blog</a></li>-->
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
@@ -65,18 +65,16 @@
 		<hr>
 			<p class="fleft">About</p>
 		</header>
-
-		
 		
 		<aside class="grid col-one-quarter mq2-col-full">
-			<p class="mbottom">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis.
+			<p class="mbottom">Savit Consultancy is a small consultancy firm located in Richmond, United Kingdom. Our main services are focused on EAI, SOA and Oracle Fusion Middleware, working mainly in and around London. 
 			</p>
 			<menu>
 				<ul>
 					<li><a href="#navteam" class="arrow">Our team</a></li>
 					<li><a href="#navphilo" class="arrow">Our philosophy</a></li>
 					<li><a href="#navplace" class="arrow">Our place</a></li>
-					<li><a href="#navother" class="arrow">Our lorem</a></li>
+					<!--<li><a href="#navother" class="arrow">Our lorem</a></li>-->
 				</ul>
 			</menu>
 		</aside>
@@ -101,13 +99,13 @@
 			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.</p>
 			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.</p>
 			</article>
-					
+				<!--	
 			<article id="navother">
 			<h2>Our lorem</h2>
 			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.</p>
 			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.</p>
 			</article>
-		
+	    -->	
 		</section>
 		
 	</div> <!--main-->
@@ -130,9 +128,9 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
-			<li><a href="works.html">Clients</a></li>
+			<!--<li><a href="works.html">Clients</a></li>
 			<li><a href="services.html">Services</a></li>
-			<li><a href="blog.html">Blog</a></li>
+			<li><a href="blog.html">Blog</a></li>-->
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
