--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 	<meta name="description" content="Designa Studio, a HTML5 / CSS3 template.">
 	<meta name="author" content="Sylvain Lafitte, Web Designer, sylvainlafitte.com">
 	
-	<title>CONTACT// Savit Consultancy</title>
+	<title>CONTACT // Savit Consultancy</title>
 	
 	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<link rel="shortcut icon" type="image/png" href="favicon.png">
@@ -40,7 +40,7 @@
 	<header id="navtop">
 		<a href="index.html" class="logo fleft">
       <!--<img src="img/logo.png" alt="Designa Studio">-->
-      <h1 style="font-family: Iceland, Verdana, Helvetica;"><span style="color: red; ">SAVIT</span> <span style="color: grey;">Consultancy</span></h1>
+      <h1 style="font-family: Iceland, Verdana, Helvetica;"><span style="color: MediumTurquoise; ">SAVIT</span> <span style="color: grey;">Consultancy</span></h1>
 		</a>
 		
 		<nav class="fright">
@@ -48,12 +48,12 @@
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
 			</ul>
-			<ul>
+			<!--<ul>
 				<li><a href="works.html">Clients</a></li>
 				<li><a href="services.html">Services</a></li>
-			</ul>
+			</ul>-->
 			<ul>
-				<li><a href="blog.html">Blog</a></li>
+				<!--<li><a href="blog.html">Blog</a></li>-->
 				<li><a href="contact.html" class="navactive">Contact</a></li>
 			</ul>
 		</nav>
@@ -82,10 +82,10 @@
 			</address>
 		
 			<p class="mbottom">
-				00 77 66 55 33<br >
-				00 77 66 55 33</p>
+				+44 (0)7564 635214
+			</p>
 			<p class="mbottom">
-				<a href="#">info@nagazuka.nl</a><br >
+				<a href="#">savit@nagazuka.nl</a><br >
 				<a href="#">Savit on Facebook</a><br >
 				<a href="#">@savit on Twitter</a><br >
 				<a href="#">Savit on Google+</a>
@@ -101,7 +101,7 @@
 		
 		<section class="grid col-three-quarters mq2-col-two-thirds mq3-col-full">
 			<h2>Drop us a message</h2>
-			<p class="warning">Don't forget to put your own email address in the php file!</p>
+			<!--<p class="warning">Don't forget to put your own email address in the php file!</p>-->
 			
 			<form id="contact_form" class="contact_form" action="contact.php" method="post" name="contact_form">	
 				<ul>
@@ -144,9 +144,9 @@
 		<ul>
 			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
-			<li><a href="works.html">Clients</a></li>
+			<!--<li><a href="works.html">Clients</a></li>
 			<li><a href="services.html">Services</a></li>
-			<li><a href="blog.html">Blog</a></li>
+			<li><a href="blog.html">Blog</a></li>-->
 			<li><a href="contact.html">Contact</a></li>
 		</ul>
 	</nav>
