--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 	<header id="navtop">
 		<a href="index.html" class="logo fleft">
       <!--<img src="img/logo.png" alt="Designa Studio">-->
-      <h1 style="font-family: Iceland, Verdana, Helvetica;"><span style="color: red; ">SAVIT</span> <span style="color: grey;">Consultancy</span></h1>
+      <h1 style="font-family: Iceland, Verdana, Helvetica;"><span style="color: MediumTurquoise; ">SAVIT</span> <span style="color: grey;">Consultancy</span></h1>
 		</a>
 		
 		<nav class="fright">
@@ -49,12 +49,13 @@
 				<li><a href="index.html" class="navactive">Home</a></li>
 				<li><a href="about.html">About</a></li>
 			</ul>
+      <!--
 			<ul>
 				<li><a href="works.html">Clients</a></li>
 				<li><a href="services.html">Services</a></li>
-			</ul>
-			<ul>
-				<li><a href="blog.html">Blog</a></li>
+			</ul>-->
+			<ul><!--
+				<li><a href="blog.html">Blog</a></li>-->
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
@@ -73,9 +74,9 @@
 			<h1>High End <br>
 			Enterprise <br>
 			Integration </h1>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim. Suspendisse id velit vitae ligula volutpat condimentum. Aliquam erat volutpat. Sed quis velit.
+			<p>Savit provides consultancy services focused high-end enterprise integration systems. Savit Consultancy offers expertise on designing, building, and supporting large scale integration solutions based around SOA, EAI, and Big Data. 
 			</p>
-			<p>Vivamus pharetra posuere sapien. Nam consectetuer. Sed aliquam, nunc eget euismod ullamcorper, lectus nunc ullamcorper orci, fermentum bibendum enim nibh eget ipsum.
+			<p>Savit Consultancy is specialized in delivering solutions based on Oracle Fusion Middleware, but is not limited to Oracle software. We have knowledge on a whole range of similar vendors like TIBCO, Microsoft, and various open source tools.
 			</p>
 		</div>
 			
@@ -88,8 +89,8 @@
 		                 <img src="img/img2.jpg" alt="">
 		                 <figcaption>
 		                 	<div>
-		                 	<h5>Caption 1</h5>
-		                 	<p>Lorem ipsum dolor set amet, lorem, <a href="#">link text</a></p>
+		                 	<h5>EAI</h5>
+		                 	<p>Integrate your existing enterprise application portfolio</p>
 		                 	</div>
 		                 </figcaption>
 		             	</figure>
@@ -100,8 +101,8 @@
 		                     <img src="img/img.jpg" alt="">
 		                     <figcaption>
 		                     	<div>
-		                     	<h5>Caption 2</h5>
-		                     	<p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+		                     	<h5>SOA</h5>
+		                     	<p>Service design, service implementation and service enablement of legacy systems.</p>
 		                     	</div>
 		                     </figcaption>
 		                 	</figure>
@@ -121,20 +122,20 @@
 		
 		<article class="grid col-one-third mq3-col-full">
 			<aside>01</aside>
-			<h5>Enterprise Integration</h5>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim.</p>
+			<h5>Enterprise Application Integration</h5>
+			<p>We can integrate your existing enterprise application portfolio, using the most applicable technology, whether it is Message-Oriented Middleware, Service-Oriented Architecture or Event-Driven Architecture.</p>
 		</article>
 		
 		<article class="grid col-one-third mq3-col-full">
 			<aside>02</aside>
 			<h5>SOA</h5>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim.</p>
+			<p>We have a wealth of experience in designing solutions based on SOA-principles. We can design and deliver new services, enable your legacy systems through a SOA-based platform.</p>
 		</article>
 		
 		<article class="grid col-one-third mq3-col-full">
 			<aside>03</aside>
 			<h5>Oracle Fusion Middleware</h5>
-			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Morbi commodo, ipsum sed pharetra gravida, orci magna rhoncus neque, id pulvinar odio lorem non turpis. Nullam sit amet enim.</p>
+			<p>We have built integration solutions with the market-leading product line of Oracle in multiple industries across multiple continents. We can offer you the latest in Oracle Fusion Middleware consultancy.</p>
 		</article>
 	</section>
 
@@ -209,9 +210,9 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="about.html">About</a></li>
-				<li><a href="works.html">Clients</a></li>
+				<!--<li><a href="works.html">Clients</a></li>
 				<li><a href="services.html">Services</a></li>
-				<li><a href="blog.html">Blog</a></li>
+				<li><a href="blog.html">Blog</a></li>-->
 				<li><a href="contact.html">Contact</a></li>
 			</ul>
 		</nav>
