--- a/services.html
+++ b/services.html
@@ -42,7 +42,7 @@
 	<header id="navtop">
 		<a href="index.html" class="logo fleft">
       <!--<img src="img/logo.png" alt="Designa Studio">-->
-      <h1 style="font-family: Iceland, Verdana, Helvetica;"><span style="color: red; ">SAVIT</span> <span style="color: grey;">Consultancy</span></h1>
+      <h1 style="font-family: Iceland, Verdana, Helvetica;"><span style="color: MediumTurquoise; ">SAVIT</span> <span style="color: grey;">Consultancy</span></h1>
 		</a>
 		
 		<nav class="fright">
